# FideX

./: .gitignore  FedX.json  README.md  a.py  index.html  package.json  tsconfig.json  vite.config.ts
ai-assistant/ai/config/: general.yaml
ai-assistant/ai/src/: config.py
ai-assistant/ai/src/agent/tools/: functions.py
contract/: FedX.json  hardhat.config.ts  package-lock.json  package.json
contract/contracts/: business.sol  demo.sol
contract/contracts/multisig/: TwoUserMultisig.sol
contract/deploy/: business.ts
contract/deploy/multisig/: deploy-factory.ts  deploy-multisig.ts
myenv/: pyvenv.cfg
near-ai-assistant/ai/: pyproject.toml
near-ai-assistant/ai/src/: config.py
near-ai-assistant/ai/src/agent/tools/: functions.py
src/: App.tsx
src/components/: Account.tsx  LoyaltyForm.tsx  Navigation.tsx
src/pages/: AllBusinesses.tsx  Checkout.tsx  Features.tsx  Home.tsx  Launch.tsx  Success.tsx  Test.tsx
src/services/: contracts.ts
src/services/ethereum/: EthereumContext.tsx  types.ts
src/styles/: globals.css
src/utils/: socket.ts
